Erase unused macros. Update todos

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -26,7 +26,8 @@
 % and covered by LPPL is defined by the unpacking scripts (with
 % extension .ins) which are part of the distribution.
 % \fi
-% ^^A\CheckSum{517} TODO: update checksum when distributing
+% ^^A\CheckSum{517} TODO: update checksum when distributing. Also check version
+% ^^A numbering for changes
 %
 % \iffalse
 %    Tell the \LaTeX\ system who we are and write an entry on the
@@ -70,10 +71,6 @@
   linkcolor=blue
 }
 
-^^A TODO: erase the following lines?
-% \newcommand*\TeXhax{\TeX hax}
-% \newcommand*\langvar{$\langle \it lang \rangle$}
-% \newcommand*\note[1]{}
 \newcommand*\babel{\texttt{Babel}}
 \newcommand*\babelcat{\texttt{babel-catalan}}
 \newcommand*\Lopt[1]{\textsf{#1}}
@@ -340,7 +337,7 @@
 % \changes{catalan-2.2p}{2003/11/17}{Inserted translation for
 %    Glossary}
 % \changes{catalan-2.2q}{2020/09/23}{Use Babel 3.9 syntax for captions and dates} %TODO:
-% %quit if Babel is < 3.9
+% %quit if Babel is < 3.9?
 %    \begin{macrocode}
 \StartBabelCommands*{catalan}{captions}
       [unicode, fontenc=TU EU1 EU2, charset=utf8]
