--- a/catalan.dtx
+++ b/catalan.dtx
@@ -433,7 +433,7 @@
 %    non-zero lower case code; when we do that \TeX\ will find more
 %    breakpoints in words that contain this character in its r\^ole as
 %    apostrophe. 
-% \changes{catalan-2.2q}{2020/10/4}{Use bbl@save notation to store the
+% \changes{catalan-2.2q}{2020/10/4}{Use bbl@save@variable to store the
 %    lowercase code of the apostrophe, and set the unicode apostrophe
 %    to have a non-zero lower case code too. Code taken essentially
 %    from babel-french}
@@ -492,7 +492,7 @@
 %    Now make sure that the characters that have been turned into
 %    shorthanfd characters expand to `normal' characters outside the
 %    catalan environment.
-% \changes{catalan-2.2l}{1999/12/16}{Don't forget do deactivate the
+% \changes{catalan-2.2l}{1999/12/16}{Don't forget to deactivate the
 %    shorthands}
 %    \begin{macrocode}
 \addto\noextrascatalan{\bbl@deactivate{"}}
@@ -516,19 +516,15 @@
 %    were specified.
 %
 % \changes{catalan-2.2h}{1997/01/08}{Added some comment signs to
-%    prevent unwanted spaces in the output} 
+%    prevent unwanted spaces in the output}
+% \changes{catalan-2.2q}{2020/10/04}{Remove dieresis because babel already
+%    handles it. Set accents with better hyphenation even if
+%    activeacute or activegrave are not set}
 %    \begin{macrocode}
 \addto\extrascatalan{%
-  \babel@save\"%
-  \def\"{\protect\@umlaut}}%
-\@ifpackagewith{babel}{activegrave}{%
-  \babel@save\`%
-  \addto\extrascatalan{\def\`{\protect\@grave}}
-  }{}
-\@ifpackagewith{babel}{activeacute}{%
-  \babel@save\'%
-  \addto\extrascatalan{\def\'{\protect\@acute}}
-  }{}
+  \cat@sdef\`{\protect\cat@grave}
+  \cat@sdef\'{\protect\cat@acute}
+}%
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -538,34 +534,26 @@
 %    tables~\ref{tab:catalan-quote-def}
 %    and~\ref{tab:catalan-quote-opt}.
 %
-%  \begin{macro}{\dieresis}
-%  \begin{macro}{\textacute}
+%  \begin{macro}{\cat@oldacute}
 % \changes{catalan-2.1d}{1994/06/26}{Renamed from \cs{acute} as that
 %    is a \cs{mathaccent}}
-%  \begin{macro}{\textgrave}
+%  \begin{macro}{\cat@oldgrave}
+% \changes{catalan-2.2q}{2020/10/04}{Renamed from \cs{textacute},
+%    \cs{textgrave}, to \cs{\cs{cat@oldacute}, \cs{cat@oldgrave}.}
 %
-%    The original definition of |\"| is stored as |\dieresis|, because
-%    the definition of |\"| might not be the default plain \TeX\
-%    one. If the user uses \textsc{PostScript} fonts with the Adobe
-%    font encoding the \texttt{"} character is not in the same
-%    position as in Knuth's font encoding. In this case |\"| will not
-%    be defined as |\accent"7F 1|, but as |\accent'310 #1|. Something
-%    similar happens when using fonts that follow the Cork
-%    encoding. For this reason we save the definition of |\"| and use
-%    that in the definition of other macros. We do likewise for |\`|,
-%    and |\'|.
+%    The original definition of |\'| is stored as |\cat@oldacute|, because
+%    the definition of |\'| might not be the default plain \TeX\
+%    one. For this reason we save the definition of |\'| and use
+%    that in the definition of other macros. We do likewise for |\`|.
 %    \begin{macrocode}
-\let\dieresis\"
-\@ifpackagewith{babel}{activegrave}{\let\textgrave\`}{}
-\@ifpackagewith{babel}{activeacute}{\let\textacute\'}{}
+\let\cat@oldgrave\`
+\let\cat@oldacute\'
 %    \end{macrocode}
 %  \end{macro}
 %  \end{macro}
-%  \end{macro}
 %
-%  \begin{macro}{\@umlaut}
-%  \begin{macro}{\@acute}
-%  \begin{macro}{\@grave}
+%  \begin{macro}{\cat@acute}
+%  \begin{macro}{\cat@grave}
 %    We check the encoding and if not using T1, we make the accents
 %    expand but enabling hyphenation beyond the accent. If this is the
 %    case, not all break positions will be found in words that contain
@@ -583,27 +571,18 @@
 \ifx\DeclareFontShape\@undefined
   \wlog{Warning: You are using an old LaTeX}
   \wlog{Some word breaks will not be found.}
-  \def\@umlaut#1{\allowhyphens\dieresis{#1}\allowhyphens}
-  \@ifpackagewith{babel}{activeacute}{%
-    \def\@acute#1{\allowhyphens\textacute{#1}\allowhyphens}}{}
-  \@ifpackagewith{babel}{activegrave}{%
-    \def\@grave#1{\allowhyphens\textgrave{#1}\allowhyphens}}{}
+    \def\cat@acute#1{\allowhyphens\cat@oldacute{#1}\allowhyphens}
+    \def\cat@grave#1{\allowhyphens\cat@oldgrave{#1}\allowhyphens}
 \else
   \ifx\f@encoding\bbl@t@one
-    \let\@umlaut\dieresis
-    \@ifpackagewith{babel}{activeacute}{%
-      \let\@acute\textacute}{}
-    \@ifpackagewith{babel}{activegrave}{%
-      \let\@grave\textgrave}{}
+      \let\cat@acute\cat@oldacute
+      \let\cat@grave\cat@oldgrave
   \else
     \wlog{Warning: You are using encoding \f@encoding\space
       instead of T1.}
     \wlog{Some word breaks will not be found.}
-    \def\@umlaut#1{\allowhyphens\dieresis{#1}\allowhyphens}
-    \@ifpackagewith{babel}{activeacute}{%
-      \def\@acute#1{\allowhyphens\textacute{#1}\allowhyphens}}{}
-    \@ifpackagewith{babel}{activegrave}{%
-      \def\@grave#1{\allowhyphens\textgrave{#1}\allowhyphens}}{}
+    \def\cat@acute#1{\allowhyphens\cat@oldacute{#1}\allowhyphens}
+    \def\cat@grave#1{\allowhyphens\cat@oldgrave{#1}\allowhyphens}
   \fi
 \fi
 %    \end{macrocode}
@@ -630,7 +609,6 @@
 %    solutions are under study.}
 %  \end{macro}
 %  \end{macro}
-%  \end{macro}
 %
 % \changes{catalan-2.2a}{1995/03/14}{All the code to deal with active
 %    characters is now in \file{babel.def}} 
@@ -638,12 +616,12 @@
 %    Now we can define our shorthands: the diaeresis and ``ela
 %    geminada'' support,
 %    \begin{macrocode}
-\declare@shorthand{catalan}{"i}{\textormath{\@umlaut\i}{\ddot\imath}}
+\declare@shorthand{catalan}{"i}{\textormath{\"i}{\ddot\imath}}
 \declare@shorthand{catalan}{"l}{\lgem{}}
-\declare@shorthand{catalan}{"u}{\textormath{\@umlaut u}{\ddot u}}
-\declare@shorthand{catalan}{"I}{\textormath{\@umlaut I}{\ddot I}}
+\declare@shorthand{catalan}{"u}{\textormath{\"u}{\ddot u}}
+\declare@shorthand{catalan}{"I}{\textormath{\"I}{\ddot I}}
 \declare@shorthand{catalan}{"L}{\Lgem{}}
-\declare@shorthand{catalan}{"U}{\textormath{\@umlaut U}{\ddot U}}
+\declare@shorthand{catalan}{"U}{\textormath{\"U}{\ddot U}}
 %    \end{macrocode}
 %    cedille,
 % \changes{catalan-2.2c}{1995/07/08}{cedile now produced by double
@@ -666,12 +644,12 @@
 % \changes{catalan-2.2e}{1996/03/05}{Added `{}` as an axtra shorthand}
 %    \begin{macrocode}
 \@ifpackagewith{babel}{activegrave}{%
-  \declare@shorthand{catalan}{`a}{\textormath{\@grave a}{\grave a}}
-  \declare@shorthand{catalan}{`e}{\textormath{\@grave e}{\grave e}}
-  \declare@shorthand{catalan}{`o}{\textormath{\@grave o}{\grave o}}
-  \declare@shorthand{catalan}{`A}{\textormath{\@grave A}{\grave A}}
-  \declare@shorthand{catalan}{`E}{\textormath{\@grave E}{\grave E}}
-  \declare@shorthand{catalan}{`O}{\textormath{\@grave O}{\grave O}}
+  \declare@shorthand{catalan}{`a}{\textormath{\cat@grave a}{\grave a}}
+  \declare@shorthand{catalan}{`e}{\textormath{\cat@grave e}{\grave e}}
+  \declare@shorthand{catalan}{`o}{\textormath{\cat@grave o}{\grave o}}
+  \declare@shorthand{catalan}{`A}{\textormath{\cat@grave A}{\grave A}}
+  \declare@shorthand{catalan}{`E}{\textormath{\cat@grave E}{\grave E}}
+  \declare@shorthand{catalan}{`O}{\textormath{\cat@grave O}{\grave O}}
   \declare@shorthand{catalan}{``}{\textquotedblleft}%''
   }{}
 %    \end{macrocode}
@@ -683,21 +661,21 @@
 %    active acute}
 %    \begin{macrocode}
 \@ifpackagewith{babel}{activeacute}{%
-  \declare@shorthand{catalan}{'a}{\textormath{\@acute a}{^{\prime} a}}
-  \declare@shorthand{catalan}{'e}{\textormath{\@acute e}{^{\prime} e}}
-  \declare@shorthand{catalan}{'i}{\textormath{\@acute\i{}}{^{\prime} i}}
-  \declare@shorthand{catalan}{'o}{\textormath{\@acute o}{^{\prime} o}}
-  \declare@shorthand{catalan}{'u}{\textormath{\@acute u}{^{\prime} u}}
-  \declare@shorthand{catalan}{'A}{\textormath{\@acute A}{^{\prime} A}}
-  \declare@shorthand{catalan}{'E}{\textormath{\@acute E}{^{\prime} E}}
-  \declare@shorthand{catalan}{'I}{\textormath{\@acute I}{^{\prime} I}}
-  \declare@shorthand{catalan}{'O}{\textormath{\@acute O}{^{\prime} O}}
-  \declare@shorthand{catalan}{'U}{\textormath{\@acute U}{^{\prime} U}}
+  \declare@shorthand{catalan}{'a}{\textormath{\cat@acute a}{^{\prime} a}}
+  \declare@shorthand{catalan}{'e}{\textormath{\cat@acute e}{^{\prime} e}}
+  \declare@shorthand{catalan}{'i}{\textormath{\cat@acute\i{}}{^{\prime} i}}
+  \declare@shorthand{catalan}{'o}{\textormath{\cat@acute o}{^{\prime} o}}
+  \declare@shorthand{catalan}{'u}{\textormath{\cat@acute u}{^{\prime} u}}
+  \declare@shorthand{catalan}{'A}{\textormath{\cat@acute A}{^{\prime} A}}
+  \declare@shorthand{catalan}{'E}{\textormath{\cat@acute E}{^{\prime} E}}
+  \declare@shorthand{catalan}{'I}{\textormath{\cat@acute I}{^{\prime} I}}
+  \declare@shorthand{catalan}{'O}{\textormath{\cat@acute O}{^{\prime} O}}
+  \declare@shorthand{catalan}{'U}{\textormath{\cat@acute U}{^{\prime} U}}
   \declare@shorthand{catalan}{'|}{%
     \textormath{\csname normal@char\string'\endcsname}{^{\prime}}}
 %    \end{macrocode}
 %         the acute accent,
-% \changes{catalan-2.2c}{1995/07/08}{Added '{}' as an axtra shorthand,
+% \changes{catalan-2.2c}{1995/07/08}{Added '{}' as an extra shorthand,
 %    removed 'n as a shorthand}
 %    \begin{macrocode}
   \declare@shorthand{catalan}{''}{%
@@ -815,12 +793,12 @@
 %    fontenc}
 %    \begin{macrocode}
 \AtBeginDocument{%
-  \let\lslash\l
-  \let\Lslash\L
-  \DeclareRobustCommand\l{\@ifnextchar.\bbl@l\lslash}
-  \DeclareRobustCommand\L{\@ifnextchar.\bbl@L\Lslash}}
-\def\bbl@l#1#2{\lgem}
-\def\bbl@L#1#2{\Lgem}
+  \let\cat@lslash\l
+  \let\cat@Lslash\L
+  \DeclareRobustCommand\l{\@ifnextchar.\cat@l\cat@lslash}
+  \DeclareRobustCommand\L{\@ifnextchar.\cat@L\cat@Lslash}}
+\def\cat@l#1#2{\lgem}
+\def\cat@L#1#2{\Lgem}
 %    \end{macrocode}
 %  \end{macro}
 %  \end{macro}
