--- a/catalan.dtx
+++ b/catalan.dtx
@@ -539,7 +539,7 @@
 %    is a \cs{mathaccent}}
 %  \begin{macro}{\cat@oldgrave}
 % \changes{catalan-2.2q}{2020/10/04}{Renamed from \cs{textacute},
-%    \cs{textgrave}, to \cs{\cs{cat@oldacute}, \cs{cat@oldgrave}.}
+%    \cs{textgrave}, to \cs{cat@oldacute}, \cs{cat@oldgrave}.}
 %
 %    The original definition of |\'| is stored as |\cat@oldacute|, because
 %    the definition of |\'| might not be the default plain \TeX\
